Latest changes few fixes